# fastapi-template

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.ci/: docker-compose.yml
.github/workflows/: code-integration.yml
api/: Dockerfile  main.py  repository.py  test_all.py
api/migrations/: env.py
api/migrations/versions/: 0001_initial_migration.py
