[tool.poetry]
name = "fastapi-template"
version = "1.2.0"

authors = ["Donny Peeters <donny.peeters@hotmail.com>"]
maintainers = ["Donny Peeters <donny.peeters@hotmail.com>"]
description = "A FastAPI template."
readme = "README.md"
homepage = "https://github.com/BiteStreams/fastapi-template"
repository = "https://github.com/BiteStreams/fastapi-template"
keywords = ["FastAPI", "Template"]


[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.0"
fastapi = "^0.109.1"
uvicorn = "^0.18.3"
SQLAlchemy = "^1.4.42"
alembic = "^1.8.1"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
httpx = "^0.27.0"
pytest = "^7.4.4"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "unit: mark a test as a unit test.",
    "integration: mark test as an integration test.",
]

[tool.black]
target-version = ["py310"]
line-length = 120

[tool.vulture]
min_confidence = 90
exclude = ["/tests/", "*venv*"]
paths = ["."]

[tool.ruff]
select = ["E", "F", "ERA", "W", "TID", "I", "G", "INP", "T20", "UP", "ISC", "PTH", "SIM", "PLC", "A"]
ignore = ["UP006", "UP007", "A003", "T201", "T203"]
fix = true
line-length = 120
target-version = "py310"
task-tags = ["Example", "todo", "TODO", "FIXME"]
